[package]
name = "bomb"
version = "0.1.0"
description = "AWS Nuke Wrapper"
authors = ["user"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# default enables signaling the change of the custom_protocol feature
default = ["custom_protocol"]
custom_protocol = ["tauri/custom_protocol"]
